RESOLVED FIXED41742
[EFL] Fix style errors in ewk_private.h
https://bugs.webkit.org/show_bug.cgi?id=41742
Summary [EFL] Fix style errors in ewk_private.h
Gyuyoung Kim
Reported 2010-07-06 23:16:18 PDT
There are style errors in ewk_private.h. ../WebKit/WebKit/efl/ewk/ewk_private.h:51: Extra space between void and ewk_view_ready [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:52: Extra space between void and ewk_view_title_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:53: Extra space between void and ewk_view_uri_changed [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:54: Extra space between void and ewk_view_load_started [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:55: Extra space between void and ewk_view_frame_main_load_started [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:56: Extra space between void and ewk_view_load_finished [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:57: Extra space between void and ewk_view_load_error [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:58: Extra space between void and ewk_view_load_progress_changed [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:59: Extra space between Evas_Object and *ewk_view_window_create [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:61: Extra space between void and ewk_view_mouse_link_hover_in [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:62: Extra space between void and ewk_view_mouse_link_hover_out [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:64: Extra space between void and ewk_view_toolbars_visible_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:65: Extra space between void and ewk_view_toolbars_visible_get [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:67: Extra space between void and ewk_view_statusbar_visible_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:68: Extra space between void and ewk_view_statusbar_visible_get [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:69: Extra space between void and ewk_view_statusbar_text_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:71: Extra space between void and ewk_view_scrollbars_visible_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:72: Extra space between void and ewk_view_scrollbars_visible_get [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:74: Extra space between void and ewk_view_menubar_visible_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:75: Extra space between void and ewk_view_menubar_visible_get [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:77: Extra space between void and ewk_view_tooltip_text_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:79: Extra space between void and ewk_view_add_console_message [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:81: Extra space between void and ewk_view_run_javascript_alert [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:82: Extra space between Eina_Bool and ewk_view_run_javascript_confirm [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:83: Extra space between Eina_Bool and ewk_view_run_javascript_prompt [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:84: Extra space between Eina_Bool and ewk_view_should_interrupt_javascript [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:85: Extra space between uint64_t and ewk_view_exceeded_database_quota [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:87: Extra space between Eina_Bool and ewk_view_run_open_panel [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:89: Extra space between void and ewk_view_repaint [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:90: Extra space between void and ewk_view_scroll [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:97: Extra space between void and ewk_view_popup_new [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:98: Extra space between void and ewk_view_viewport_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:100: Extra space between void and ewk_view_download_request [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:102: Extra space between Ewk_History and *ewk_history_new [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:103: Extra space between void and ewk_history_free [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:106: Extra space between Eina_Bool and ewk_context_menu_free [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:107: Extra space between void and ewk_context_menu_item_append [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:109: Extra space between void and ewk_context_menu_show [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:113: Extra space between Evas_Object and *ewk_frame_add [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:114: Extra space between Eina_Bool and ewk_frame_init [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:115: Extra space between Evas_Object and *ewk_frame_child_add [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:118: Extra space between void and ewk_frame_core_gone [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:120: Extra space between void and ewk_frame_load_started [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:121: Extra space between void and ewk_frame_load_finished [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:122: Extra space between void and ewk_frame_load_error [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:123: Extra space between void and ewk_frame_load_progress_changed [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:125: Extra space between void and ewk_frame_contents_size_changed [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:126: Extra space between void and ewk_frame_title_set [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:128: Extra space between void and ewk_frame_view_create_for_view [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:129: Extra space between Eina_Bool and ewk_frame_uri_changed [whitespace/declaration] [3] ../WebKit/WebKit/efl/ewk/ewk_private.h:130: Extra space between void and ewk_frame_force_layout [whitespace/declaration] [3]
Attachments
Patch (11.04 KB, patch)
2010-07-06 23:19 PDT, Gyuyoung Kim
abarth: review+
abarth: commit-queue-
Patch (11.04 KB, patch)
2010-07-07 21:52 PDT, Gyuyoung Kim
no flags
Patch (11.03 KB, patch)
2010-07-08 17:28 PDT, Gyuyoung Kim
commit-queue: commit-queue-
patch (12.82 KB, patch)
2010-07-11 18:52 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2010-07-06 23:19:07 PDT
Created attachment 60689 [details] Patch I fix them.
Adam Barth
Comment 2 2010-07-07 02:48:20 PDT
Comment on attachment 60689 [details] Patch Great! Thanks. WebKit/ChangeLog:3 + Reviewed by Kenneth Rohde Christiansen. Has this patch already been reviewed? You can leave the "Reviewed by NODBODY (OOPS!)" text in the ChangeLog and the tools will fill in the name of whoever actually reviews your patch.
Gyuyoung Kim
Comment 3 2010-07-07 21:52:56 PDT
Created attachment 60835 [details] Patch Thank you for your comment. I modify this patch according to your guidance and one more thing. 98 : void ewk_view_viewport_set(Evas_Object *o, float w, float h, float init_scale, float max_scale, float min_scale, float user_scalable); This line's style error was already fixed by Bug 40278.
Antonio Gomes
Comment 4 2010-07-08 06:31:08 PDT
kim, some points: - if attachment 60689 [details] is obsolete, please mark it as such. - since the later patch was r+'ed by Adam Barth, you should fill the field "Reviewed by" in the changelog with his name. Then you can just set cq? and do not need to set r? .
Gyuyoung Kim
Comment 5 2010-07-08 17:28:37 PDT
Created attachment 60987 [details] Patch Thank you for your guidance. I thought that Adam already review for this patch. So, I only request cq again. I fix previous problem. However, Should I request review again ?
Antonio Gomes
Comment 6 2010-07-08 18:52:41 PDT
(In reply to comment #5) > Created an attachment (id=60987) [details] > Patch > > Thank you for your guidance. I thought that Adam already review for this patch. So, I only request cq again. > I fix previous problem. However, Should I request review again ? No.
WebKit Commit Bot
Comment 7 2010-07-09 13:09:50 PDT
Comment on attachment 60987 [details] Patch Rejecting patch 60987 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebKit/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit/efl/ewk/ewk_private.h Hunk #1 FAILED at 48. 1 out of 1 hunk FAILED -- saving rejects to file WebKit/efl/ewk/ewk_private.h.rej Full output: http://webkit-commit-queue.appspot.com/results/3466083
Gyuyoung Kim
Comment 8 2010-07-11 18:52:53 PDT
Created attachment 61186 [details] patch It seems there was a conflict between this patch and other webkit efl patch. I make a patch on latest webkit efl again. Please review again. Thank you.
WebKit Commit Bot
Comment 9 2010-07-11 19:35:27 PDT
Comment on attachment 61186 [details] patch Clearing flags on attachment: 61186 Committed r63060: <http://trac.webkit.org/changeset/63060>
Gyuyoung Kim
Comment 10 2010-07-15 23:41:16 PDT
This bugs' patch was landed in mainline.
Note You need to log in before you can comment on or make changes to this bug.