2010-07-11  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Adam Barth.

        [EFL] Fix style errors in ewk_private.h.
        https://bugs.webkit.org/show_bug.cgi?id=41742

        * efl/ewk/ewk_private.h:

Canonical link: https://commits.webkit.org/53928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63060 268f45cc-cd09-0410-ab3c-d52691b4dbfc